# GamProject--Bastion

./: .gitignore  CMakeLists.txt  GAM200_TeamExodia.sln  README.md
.github/workflows/: msbuild.yml
Backup Projects/GAM200_TeamExodia/: GAM200_TeamExodia.vcxproj.filters  main.cpp
Emscript Test/assets/: Cat.spt  Crates2.spt  Crates5.spt  Hit.anm  RobotAngry.anm
Emscript Test/cmake/: CompilerWarnings.cmake  Dependencies.cmake
Emscript Test/source/: CMakeLists.txt  main.cpp
GAM200_TeamExodia/: GAM200_TeamExodia.vcxproj  GAM200_TeamExodia.vcxproj.filters
GAM200_TeamExodia/Engine/: Collision.cpp  ComponentManager.h  Constants.h  Engine.cpp  Engine.h  Font.cpp  Logger.cpp  Logger.h  Matrix.cpp  Particle.cpp  Particle.h  ShowCollision.cpp  ShowCollision.h  Vec2.cpp  Vec2.h  Window.cpp  Window.h
GAM200_TeamExodia/Game/: Cat.h  Floor.h  Fonts.h  Laser.cpp  Main_menu.cpp  Mode1.cpp  Mode2.h  Particles.h  Portal.h  Score.cpp  Ship.cpp  main.cpp
GAM200_TeamExodia_openGL/: Diamond.h  GAM200_TeamExodia_openGL.vcxproj  GAM200_TeamExodia_openGL.vcxproj.filters  Game.cpp  Gold.h  MagicUnit.h  Map.cpp  Map.h  MeleeUnit.h  Monster.cpp  Monster.h  RangedUnit.h  Unit.h  main.cpp
GAM200_TeamExodia_openGL/Backup Modes/: Asteroid.cpp  Crates.cpp  Laser.cpp  Meteor.cpp  Meteor.h  Mode1.cpp  Mode1.h  Ship.cpp
GAM200_TeamExodia_openGL/CS230 Modes/: Asteroid.h  Cat.cpp  Cat.h  Crates.h  Mode2.h  Robots.h  Ship.h
GAM200_TeamExodia_openGL/Component/: Diamond.h  GameSpeed.h  Gold.h  Map.h  MonsterLimit.h  Time.h  Wave.cpp  Wave.h
GAM200_TeamExodia_openGL/Engine/: Animation.cpp  Animation.h  Audio.cpp  Audio.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  ComponentManager.h  Constants.h  DrawShape.cpp  DrawShape.h  Engine.cpp  Engine.h  Font.cpp  Font.h  FrameBufferManager.h  GLApp_Clone.cpp  GLApp_Clone.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GameState.h  GameStateManager.cpp  GameStateManager.h  ImGuiHelper.cpp  ImGuiHelper.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Matrix.cpp  Matrix.h  MergeCollision.cpp  MergeCollision.h  Mouse.cpp  Mouse.h  Normalization.cpp  Normalization.h  (+21 more)
GAM200_TeamExodia_openGL/Game/: AStar.cpp  AStar.h  Asteroid.cpp  Background.cpp  Background.h  BuildMode.cpp  BuildMode.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  Cat.cpp  Cat.h  Crates.cpp  Floor.cpp  Floor.h  Fonts.h  GameObjectTypes.h  GamePlayEditor.cpp  GamePlayEditor.h  GameSpeed.cpp  GameSpeed.h  Gold.cpp  Gold.h  Gravity.h  HowToPlay.cpp  HowToPlay.h  HowToplay.h  Hp_Boost_Gold_ui.cpp  Hp_Boost_Gold_ui.h  Laser.cpp  Laser.h  Life.cpp  Life.h  Lose.cpp  Lose.h  MagicUnit.cpp  MagicUnit.h  MainMenu.cpp  MainMenu.h  (+57 more)
GAM200_TeamExodia_openGL/Modes/: Game.cpp  Game.h  Tutorial.cpp  Tutorial.h
assets/: Cat.spt  Downloads - Shortcut.lnk  Explosion.anm  Laser.spt  Map1.txt  Map2.txt  Map3.txt  Robot.spt
assets/Background/: game_tile.spt  store_background.spt
assets/buttons/: InitialGoldPlus.spt  Itembox.spt  MonsterLimitPlus.spt  Selected.spt  Store_Hard.spt  Store_InGame.spt  Store_Life.spt  Store_Menu.spt  UnitCostMinus.spt  mute_off.spt  mute_on.spt  spear.spt
assets/enemy_s2/: Akuma.spt  Akuma2.spt  BanBanMon.spt  Boss.spt  Boss_dead.anm  Boss_none.anm  Devil.spt  Devil2.spt  Jewel1.spt  Jewel2.spt  Jewel3.spt  Jewel4.spt  Jewel5.spt  Jewel6.spt  Monster_1.spt  Monster_10.spt  Monster_11.spt  Monster_12.spt  Monster_13.spt  Monster_14.spt  Monster_15.spt  Monster_2.spt  Monster_3.spt  Monster_4.spt  Monster_5.spt  Monster_6.spt  Monster_7.spt  Monster_8.spt  Monster_9.spt  Monster_dead13.anm  Monster_dead15.anm  Monster_dead8.anm  Monster_none13.anm  Monster_none15.anm  Monster_none789.anm  Monster_none8.anm  Robot1.spt  Robot2.spt  Robot3.spt  default_enemy.spt  (+2 more)
assets/images/: Player_Idle.anm  arm.spt  back_dash.anm  boost.spt  default_fire.anm  front_dash.anm  left_dash.anm  right_dash.anm
assets/maps/: Map1.txt  Map2.txt  Map3 .txt  Map3.txt  Map_Read_Me.txt  Wave1.txt  Wave2.txt  Wave3.txt  Wave_Read_Me.txt  editor.txt
assets/monsters/: Basic_Monster.txt  Fast_Monster.txt  Heal_Monster.txt  Slow_Monster.txt  Stealth_Monster.txt
assets/shaders/: box.frag  box.vert  font.frag  font.vert  texture.frag  texture.vert
assets/towers/: Auto_Tower.txt  Basic_Tower.txt  Double_Tower.txt  Push_Tower.txt  Tower_Read_Me.txt  Triple_Tower.txt  Wide_Tower.txt  back_dash.anm  push_tower.spt  tower_base.spt  triple_tower.spt  wide_fire.anm  wide_tower.spt
cmake/: Dependencies.cmake
cmake/dependencies/: DearImGUI.cmake  GLEW.cmake  (+2 more)
common_gl/: common_gl.vcxproj  common_gl.vcxproj.filters
prop-pages/: opengl-sdl2-glew-stb-imgui.props
source/: CMakeLists.txt  main.cpp
source/Component/: Diamond.h  GameSpeed.h  Gold.h  Interface.h  Map.h  MonsterLimit.h  StartGold.h  Timer.h  Wave.cpp  Wave.h
source/Engine/: Audio.cpp  Audio.h  AudioList.h  Camera.cpp  Camera.h  Collision.cpp  Component.h  Drawing.cpp  Drawing.h  Engine.cpp  Engine.h  Font.cpp  Font.h  GameObject.cpp  GameObjectManager.cpp  GameObjectManager.h  GameState.h  GameStateManager.cpp  GameStateManager.h  IfWantShader.h  Image2D.cpp  Input.cpp  Input.h  MergeCollision.cpp  MergeCollision.h  Mouse.h  Normalization.cpp  Normalization.h  Particle.cpp  Particle.h  Rect.h  ShowCollision.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Vec2.h  Window.cpp
source/Game/: Fonts.h  GameObjectTypes.h  Mode2.cpp  Mode2.h  Particles.h  States.h
source/Game/Modes/: Credit.cpp  Credit.h  Editor.cpp  Editor.h  Game.cpp  Game.h  HowToPlay.cpp  Lose.cpp  Lose.h  MainMenu.cpp  MainMenu.h  Setting.cpp  Setting.h  Store.cpp  Store.h  Tutorial.cpp  Tutorial.h  Win.cpp  Win.h
source/Game/Objects/: Button.cpp  Button.h
source/Game/Objects/Monsters/: Boss.cpp  Boss.h  Monster.cpp  Monster.h
source/Game/Objects/Units/: BuffUnit.cpp  BuffUnit.h  MagicUnit.cpp  MagicUnit.h  MeleeUnit.cpp  MeleeUnit.h  Rambo.cpp  Rambo.h  RangedUnit.cpp  RangedUnit.h  Sniper.cpp  Sniper.h  Spear.cpp  Spear.h  Transform.cpp  Transform.h  Unit.cpp  Unit.h
tutorial-0/: imgui.ini  tutorial-0.vcxproj  tutorial-0.vcxproj.filters
(+284 files in other folders)
